# video_hybrid_search

./: .env.example  1_🏠_Home.py  README.md  pyproject.toml
pages/: 2_📄_Data.py  3_🔍_Search.py
